--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="row about-me__buttons">
           <div class="column large-half tab-full" data-aos="fade-up">
             <a
-              href="mailto:sourabhmaithani9050@gmail.com"
+              href="mailto:demo@demo.com"
               target="_blank"
               class="btn btn--stroke full-width"
               >Hire Me</a
@@ -676,7 +676,7 @@
           <p class="section-desc">
             I'm happy to connect, listen and help. Let's work together and build
             something awesome. Let's turn your idea to an even greater product.
-            <a href="mailto:sourabhmaithani9050@gmail.com">Email Me</a>.
+            <a href="mailto:demo@demo.com">Email Me</a>.
           </p>
         </div>
       </div>
@@ -688,7 +688,7 @@
       >
         <div class="column large-5 medium-full contact-phone">
           <h4>Call Me</h4>
-          <a href="tel:91905-080-4871">Call me</a>
+          <a href="tel:919999999999">Call me</a>
         </div>
 
         <div class="column large-7 medium-full contact-social">
