--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           </div>
           <div class="column large-half tab-full" data-aos="fade-up">
             <a
-              href="https://drive.google.com/file/d/1jpxmEsv1xA-En456D4tcAjKt0qMferzO/view"
+              href="https://sourabhm01.github.io/codsoft/"
               target="_blank"
               class="btn btn--primary full-width"
             >
