--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8" />
-    <title>CodSoft task1</title>
+    <title>Personal Portfolio</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
@@ -25,10 +25,10 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/CodSoftTask/Personal portfolio/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/CodSoftTask/Personal portfolio/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/CodSoftTask/Personal portfolio/favicon-16x16.png">
-    <link rel="manifest" href="/CodSoftTask/Personal portfolio/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Personal portfolio/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="k/Personal portfolio/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Personal portfolio/favicon-16x16.png">
+    <link rel="manifest" href="/Personal portfolio/site.webmanifest">
   </head>
 
   <body id="top">
