--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           </div>
           <div class="column large-half tab-full" data-aos="fade-up">
             <a
-              href="https://sourabhm01.github.io/codsoft/"
+              href="https://sourabhm01.github.io/technohacks/"
               target="_blank"
               class="btn btn--primary full-width"
             >
@@ -192,13 +192,13 @@
                 <div class="timeline__bullet"></div>
                 <div class="timeline__header">
                   <p class="timeline__timeframe">Aug 2023- Present</p>
-                  <h3 class="item-title">CodSoft</h3>
+                  <h3 class="item-title">technohacks</h3>
                   <h5>Intern</h5>
                 </div>
                 <div class="timeline__desc">
                   <p>
                     I found the intership on LikedIn. I would like to thank
-                    Codsoft for giving this great oppurtuinity to students.
+                    technohacks for giving this great oppurtuinity to students.
                   </p>
                 </div>
               </div>
