--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <div class="timeline__bullet"></div>
                 <div class="timeline__header">
                   <p class="timeline__timeframe">Aug 2023- Present</p>
-                  <h3 class="item-title">technohacks</h3>
+                  <h3 class="item-title">Technohacks</h3>
                   <h5>Intern</h5>
                 </div>
                 <div class="timeline__desc">
